# eol

./: CMakeLists.txt  GNUmakefile  binary2  cat2.c  dos.txt  echo2.c  eol-sh  eol.c  eol.txt  mac.txt  mkzero.cpp  test0.good  test1.good  unix.txt
cmake/: policy.cmake
